--- a/vignettes/braidIndex.Rmd
+++ b/vignettes/braidIndex.Rmd
@@ -88,7 +88,7 @@ braidIndex_plot(result,index="BRI", position=Year, color=River)
 ```
 
 
-```{r plot_BRIstar,fig.width=8}
+```{r plot_Wstar,fig.width=8}
 braidIndex_plot(result,index="W", position=Year, color=River)
 ```
 
